--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,32 +1,28 @@
 name: Test Workflow
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
 jobs:
-  test:
+  simple-test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Start Job
+        run: echo "Starting job..."
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Run Tests
+      - name: First Task
         run: |
-          echo "Running test..."
-          sleep 30
-          echo "Test completed!"
+          echo "Running first task"
+          sleep 10
+          echo "First task completed"
 
-      - name: Build
+      - name: Second Task
         run: |
-          echo "Starting build..."
-          sleep 20
-          echo "Build completed!"
+          echo "Running second task"
+          sleep 5
+          echo "Second task completed"
+
+      - name: Finish Job
+        run: echo "Job completed successfully!"
